--- a/sample.html
+++ b/sample.html
@@ -17,20 +17,35 @@
 </head>
 <body>
  
-<ul id="sortable" class="lps_container">
-  <div class="ui-state-default lps_icon">1</div>
-  <div class="ui-state-default lps_icon">2</div>
-  <div class="ui-state-default lps_icon">3</div>
-  <div class="ui-state-default lps_icon">4</div>
-  <div class="ui-state-default lps_icon">5</div>
-  <div class="ui-state-default lps_icon">6</div>
-  <div class="ui-state-default lps_icon">7</div>
-  <div class="ui-state-default lps_icon">8</div>
-  <div class="ui-state-default lps_icon">9</div>
-  <div class="ui-state-default lps_icon">10</div>
-  <div class="ui-state-default lps_icon">11</div>
-  <div class="ui-state-default lps_icon">12</div>
-</ul>
+<div id="sortable" class="lps_container">
+  <div class="ui-state-default lps_icon"><img src="http://www.burgerbecky.com/fanfiction_files/pdf-icon-100x100.gif"/></div>
+  <div class="ui-state-default lps_icon"><img src="http://www.burgerbecky.com/fanfiction_files/pdf-icon-100x100.gif"/></div>
+  <div class="ui-state-default lps_icon"><img src="http://www.burgerbecky.com/fanfiction_files/pdf-icon-100x100.gif"/></div>
+  <div class="ui-state-default lps_icon"><img src="http://www.burgerbecky.com/fanfiction_files/pdf-icon-100x100.gif"/></div>
+  <div class="ui-state-default lps_icon"><img src="http://www.burgerbecky.com/fanfiction_files/pdf-icon-100x100.gif"/></div>
+  <div class="ui-state-default lps_icon"><img src="http://www.burgerbecky.com/fanfiction_files/pdf-icon-100x100.gif"/></div>
+  <div class="ui-state-default lps_icon"><img src="http://www.burgerbecky.com/fanfiction_files/pdf-icon-100x100.gif"/></div>
+  <div class="ui-state-default lps_icon"><img src="http://www.burgerbecky.com/fanfiction_files/pdf-icon-100x100.gif"/></div>
+  <div class="ui-state-default lps_icon"><img src="http://www.burgerbecky.com/fanfiction_files/pdf-icon-100x100.gif"/></div>
+  <div class="ui-state-default lps_icon"><img src="http://www.burgerbecky.com/fanfiction_files/pdf-icon-100x100.gif"/></div>
+  <div class="ui-state-default lps_icon"><img src="http://www.burgerbecky.com/fanfiction_files/pdf-icon-100x100.gif"/></div>
+  <div class="ui-state-default lps_icon"><img src="http://www.burgerbecky.com/fanfiction_files/pdf-icon-100x100.gif"/></div>
+  <div class="ui-state-default lps_icon"><img src="http://www.burgerbecky.com/fanfiction_files/pdf-icon-100x100.gif"/></div>
+  <div class="ui-state-default lps_icon"><img src="http://www.burgerbecky.com/fanfiction_files/pdf-icon-100x100.gif"/></div>
+  <div class="ui-state-default lps_icon"><img src="http://www.burgerbecky.com/fanfiction_files/pdf-icon-100x100.gif"/></div>
+  <div class="ui-state-default lps_icon"><img src="http://www.burgerbecky.com/fanfiction_files/pdf-icon-100x100.gif"/></div>
+  <div class="ui-state-default lps_icon"><img src="http://www.burgerbecky.com/fanfiction_files/pdf-icon-100x100.gif"/></div>
+  <div class="ui-state-default lps_icon"><img src="http://www.burgerbecky.com/fanfiction_files/pdf-icon-100x100.gif"/></div>
+  <div class="ui-state-default lps_icon"><img src="http://www.burgerbecky.com/fanfiction_files/pdf-icon-100x100.gif"/></div>
+  <div class="ui-state-default lps_icon"><img src="http://www.burgerbecky.com/fanfiction_files/pdf-icon-100x100.gif"/></div>
+  <div class="ui-state-default lps_icon"><img src="http://www.burgerbecky.com/fanfiction_files/pdf-icon-100x100.gif"/></div>
+  <div class="ui-state-default lps_icon"><img src="http://www.burgerbecky.com/fanfiction_files/pdf-icon-100x100.gif"/></div>
+  <div class="ui-state-default lps_icon"><img src="http://www.burgerbecky.com/fanfiction_files/pdf-icon-100x100.gif"/></div>
+  <div class="ui-state-default lps_icon"><img src="http://www.burgerbecky.com/fanfiction_files/pdf-icon-100x100.gif"/></div>
+  <div class="ui-state-default lps_icon"><img src="http://www.burgerbecky.com/fanfiction_files/pdf-icon-100x100.gif"/></div>
+  <div class="ui-state-default lps_icon"><img src="http://www.burgerbecky.com/fanfiction_files/pdf-icon-100x100.gif"/></div>
+  <div class="ui-state-default lps_icon"><img src="http://www.burgerbecky.com/fanfiction_files/pdf-icon-100x100.gif"/></div>
+</div>
  
  
 </body>
