2nd working version
major change - css (size, color, background)

--- a/sample2.html
+++ b/sample2.html
@@ -17,61 +17,61 @@
 <div id="sortable" class="lps_container ui-sortable">
 
   <div class="ui-state-default lps_icon ui-droppable">
-    <img src="http://www.burgerbecky.com/fanfiction_files/pdf-icon-100x100.gif">
+    <img class = "lps_icon_image" src="http://media.tumblr.com/tumblr_llixzh0e8a1qhi61g.png"><div class="icon_description">some really long long text</div>
   </div>
 
   <div class="ui-state-default lps_icon ui-droppable">
-    <img src="http://www.burgerbecky.com/fanfiction_files/pdf-icon-100x100.gif">
+    <img class = "lps_icon_image" src="http://media.tumblr.com/tumblr_llixzh0e8a1qhi61g.png"><div class="icon_description">some text</div>
   </div>
 
   <div class="ui-state-default lps_icon ui-droppable lps_icon_group">
-    <img src="http://www.burgerbecky.com/fanfiction_files/pdf-icon-100x100.gif" class="lps_icon_small">
-    <img src="http://www.burgerbecky.com/fanfiction_files/pdf-icon-100x100.gif" class="lps_icon_small">
+    <img class = "lps_icon_image" src="http://media.tumblr.com/tumblr_llixzh0e8a1qhi61g.png" class="lps_icon_small"><div class="icon_description">some text</div>
+    <img class = "lps_icon_image" src="http://media.tumblr.com/tumblr_llixzh0e8a1qhi61g.png" class="lps_icon_small"><div class="icon_description">some text</div>
   </div>
 
   <div class="ui-state-default lps_icon ui-droppable lps_icon_group" style="">
-    <img src="http://www.burgerbecky.com/fanfiction_files/pdf-icon-100x100.gif" class="lps_icon_small">
-    <img src="http://www.burgerbecky.com/fanfiction_files/pdf-icon-100x100.gif" class="lps_icon_small">
-    <img src="http://www.burgerbecky.com/fanfiction_files/pdf-icon-100x100.gif" class="lps_icon_small">
+    <img class = "lps_icon_image" src="http://media.tumblr.com/tumblr_llixzh0e8a1qhi61g.png" class="lps_icon_small"><div class="icon_description">some text</div>
+    <img class = "lps_icon_image" src="http://media.tumblr.com/tumblr_llixzh0e8a1qhi61g.png" class="lps_icon_small"><div class="icon_description">some text</div>
+    <img class = "lps_icon_image" src="http://media.tumblr.com/tumblr_llixzh0e8a1qhi61g.png" class="lps_icon_small"><div class="icon_description">some text</div>
   </div>
   
   <div class="ui-state-default lps_icon ui-droppable lps_icon_group">
-    <img src="http://www.burgerbecky.com/fanfiction_files/pdf-icon-100x100.gif" class="lps_icon_small">
-    <img src="http://www.burgerbecky.com/fanfiction_files/pdf-icon-100x100.gif" class="lps_icon_small">
-    <img src="http://www.burgerbecky.com/fanfiction_files/pdf-icon-100x100.gif" class="lps_icon_small">
-    <img src="http://www.burgerbecky.com/fanfiction_files/pdf-icon-100x100.gif" class="lps_icon_small">
+    <img class = "lps_icon_image" src="http://media.tumblr.com/tumblr_llixzh0e8a1qhi61g.png" class="lps_icon_small"><div class="icon_description">some text</div>
+    <img class = "lps_icon_image" src="http://media.tumblr.com/tumblr_llixzh0e8a1qhi61g.png" class="lps_icon_small"><div class="icon_description">some text</div>
+    <img class = "lps_icon_image" src="http://media.tumblr.com/tumblr_llixzh0e8a1qhi61g.png" class="lps_icon_small"><div class="icon_description">some text</div>
+    <img class = "lps_icon_image" src="http://media.tumblr.com/tumblr_llixzh0e8a1qhi61g.png" class="lps_icon_small"><div class="icon_description">some text</div>
   </div>
   
   <div class="ui-state-default lps_icon ui-droppable lps_icon_group"> 
-    <img src="http://www.burgerbecky.com/fanfiction_files/pdf-icon-100x100.gif" class="lps_icon_small">
-    <img src="http://www.burgerbecky.com/fanfiction_files/pdf-icon-100x100.gif" class="lps_icon_small">
-    <img src="http://www.burgerbecky.com/fanfiction_files/pdf-icon-100x100.gif" class="lps_icon_small">
-    <img src="http://www.burgerbecky.com/fanfiction_files/pdf-icon-100x100.gif" class="lps_icon_small">
-    <img src="http://www.burgerbecky.com/fanfiction_files/pdf-icon-100x100.gif" class="lps_icon_small">
+    <img class = "lps_icon_image" src="http://media.tumblr.com/tumblr_llixzh0e8a1qhi61g.png" class="lps_icon_small"><div class="icon_description">some text</div>
+    <img class = "lps_icon_image" src="http://media.tumblr.com/tumblr_llixzh0e8a1qhi61g.png" class="lps_icon_small"><div class="icon_description">some text</div>
+    <img class = "lps_icon_image" src="http://media.tumblr.com/tumblr_llixzh0e8a1qhi61g.png" class="lps_icon_small"><div class="icon_description">some text</div>
+    <img class = "lps_icon_image" src="http://media.tumblr.com/tumblr_llixzh0e8a1qhi61g.png" class="lps_icon_small"><div class="icon_description">some text</div>
+    <img class = "lps_icon_image" src="http://media.tumblr.com/tumblr_llixzh0e8a1qhi61g.png" class="lps_icon_small"><div class="icon_description">some text</div>
   </div>
 
   <div class="ui-state-default lps_icon ui-droppable lps_icon_group" style="">
-    <img src="http://www.burgerbecky.com/fanfiction_files/pdf-icon-100x100.gif" class="lps_icon_small">
-    <img src="http://www.burgerbecky.com/fanfiction_files/pdf-icon-100x100.gif" class="lps_icon_small">
-    <img src="http://www.burgerbecky.com/fanfiction_files/pdf-icon-100x100.gif" class="lps_icon_small">
-    <img src="http://www.burgerbecky.com/fanfiction_files/pdf-icon-100x100.gif" class="lps_icon_small">
-    <img src="http://www.burgerbecky.com/fanfiction_files/pdf-icon-100x100.gif" class="lps_icon_small">
-    <img src="http://www.burgerbecky.com/fanfiction_files/pdf-icon-100x100.gif" class="lps_icon_small">
-    <img src="http://www.burgerbecky.com/fanfiction_files/pdf-icon-100x100.gif" class="lps_icon_small">
-    <img src="http://www.burgerbecky.com/fanfiction_files/pdf-icon-100x100.gif" class="lps_icon_small">
-    <img src="http://www.burgerbecky.com/fanfiction_files/pdf-icon-100x100.gif" class="lps_icon_small">
+    <img class = "lps_icon_image" src="http://media.tumblr.com/tumblr_llixzh0e8a1qhi61g.png" class="lps_icon_small"><div class="icon_description">some text</div>
+    <img class = "lps_icon_image" src="http://media.tumblr.com/tumblr_llixzh0e8a1qhi61g.png" class="lps_icon_small"><div class="icon_description">some text</div>
+    <img class = "lps_icon_image" src="http://media.tumblr.com/tumblr_llixzh0e8a1qhi61g.png" class="lps_icon_small"><div class="icon_description">some text</div>
+    <img class = "lps_icon_image" src="http://media.tumblr.com/tumblr_llixzh0e8a1qhi61g.png" class="lps_icon_small"><div class="icon_description">some text</div>
+    <img class = "lps_icon_image" src="http://media.tumblr.com/tumblr_llixzh0e8a1qhi61g.png" class="lps_icon_small"><div class="icon_description">some text</div>
+    <img class = "lps_icon_image" src="http://media.tumblr.com/tumblr_llixzh0e8a1qhi61g.png" class="lps_icon_small"><div class="icon_description">some text</div>
+    <img class = "lps_icon_image" src="http://media.tumblr.com/tumblr_llixzh0e8a1qhi61g.png" class="lps_icon_small"><div class="icon_description">some text</div>
+    <img class = "lps_icon_image" src="http://media.tumblr.com/tumblr_llixzh0e8a1qhi61g.png" class="lps_icon_small"><div class="icon_description">some text</div>
+    <img class = "lps_icon_image" src="http://media.tumblr.com/tumblr_llixzh0e8a1qhi61g.png" class="lps_icon_small"><div class="icon_description">some text</div>
   </div>
 
   <div class="ui-state-default lps_icon ui-droppable">
-    <img src="http://www.burgerbecky.com/fanfiction_files/pdf-icon-100x100.gif">
+    <img class = "lps_icon_image" src="http://media.tumblr.com/tumblr_llixzh0e8a1qhi61g.png"><div class="icon_description">some text</div>
   </div>
 
   <div class="ui-state-default lps_icon ui-droppable">
-    <img src="http://www.burgerbecky.com/fanfiction_files/pdf-icon-100x100.gif">
+    <img class = "lps_icon_image" src="http://media.tumblr.com/tumblr_llixzh0e8a1qhi61g.png"><div class="icon_description">some text</div>
   </div>
 
   <div class="ui-state-default lps_icon ui-droppable">
-    <img src="http://www.burgerbecky.com/fanfiction_files/pdf-icon-100x100.gif">
+    <img class = "lps_icon_image" src="http://media.tumblr.com/tumblr_llixzh0e8a1qhi61g.png"><div class="icon_description">some text</div>
   </div>
 
 </div>
