Quest Description, Group, Icon Merging
    * TODO : Over Class

--- a/sample2.html
+++ b/sample2.html
@@ -1,81 +1,131 @@
-<html lang="en"><head>
-  <meta charset="utf-8">
-  <title>jQuery UI Sortable - Display as grid</title>
- 
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <title>OS X Style Launchpad Javascript</title>
+   
+    <script src="http://code.jquery.com/jquery-1.9.1.js"></script>
+    <script src="http://code.jquery.com/ui/1.10.2/jquery-ui.js"></script>
+    <script src="lpsicongroup.js"></script>
+    <link href="lpsicongroup.css" rel="stylesheet" type="text/css">
+  </head>
 
-  <!--link rel="stylesheet" href="http://code.jquery.com/ui/1.10.2/themes/smoothness/jquery-ui.css" /-->
-  <script src="http://code.jquery.com/jquery-1.9.1.js"></script>
-  <script src="http://code.jquery.com/ui/1.10.2/jquery-ui.js"></script>
-  <script src="lpsicongroup.js"></script>
-  <link href="lpsicongroup.css" rel="stylesheet" type="text/css">
-  <script>
 
-  </script>
-</head>
-<body style="cursor: auto;">
- 
-<div id="sortable" class="lps_container ui-sortable">
+  <body>
+   
+  <div id="sortable" class="lps_container ui-sortable">
 
-  <div class="ui-state-default lps_icon ui-droppable">
-    <img class = "lps_icon_image" src="http://media.tumblr.com/tumblr_llixzh0e8a1qhi61g.png"><div class="icon_description">some really long long text</div>
+    <div class="ui-state-default lps_icon ui-droppable">
+      <div class="lps_icon_single">
+        <img class = "lps_icon_image" src="http://media.tumblr.com/tumblr_llixzh0e8a1qhi61g.png">
+        <div class="icon_description">some long long long text</div>
+      </div>
+    </div>
+
+    <div class="ui-state-default lps_icon ui-droppable">
+      <div class="lps_icon_single">
+        <img class = "lps_icon_image" src="http://media.tumblr.com/tumblr_llixzh0e8a1qhi61g.png">
+        <div class="icon_description">Quest</div>
+      </div>
+    </div>
+
+    <div class="ui-state-default lps_icon ui-droppable">
+      <div class="lps_icon_group">
+        <img class = "lps_icon_image" src="http://media.tumblr.com/tumblr_llixzh0e8a1qhi61g.png" class="lps_icon_small">
+        <div class="icon_description">Quest</div>
+        <img class = "lps_icon_image" src="http://media.tumblr.com/tumblr_llixzh0e8a1qhi61g.png" class="lps_icon_small">
+        <div class="icon_description">Quest</div>
+      </div>
+      <div class="icon_description">Quest Group</div>
+    </div>
+
+    <div class="ui-state-default lps_icon ui-droppable">
+      <div class="lps_icon_group">
+        <img class = "lps_icon_image" src="http://media.tumblr.com/tumblr_llixzh0e8a1qhi61g.png" class="lps_icon_small">
+        <div class="icon_description">Quest</div>
+        <img class = "lps_icon_image" src="http://media.tumblr.com/tumblr_llixzh0e8a1qhi61g.png" class="lps_icon_small">
+        <div class="icon_description">Quest</div>
+        <img class = "lps_icon_image" src="http://media.tumblr.com/tumblr_llixzh0e8a1qhi61g.png" class="lps_icon_small">
+        <div class="icon_description">Quest</div>
+      </div>
+      <div class="icon_description">Quest Group</div>
+    </div>
+    
+    <div class="ui-state-default lps_icon ui-droppable">
+      <div class="lps_icon_group">      
+        <img class = "lps_icon_image" src="http://media.tumblr.com/tumblr_llixzh0e8a1qhi61g.png" class="lps_icon_small">
+        <div class="icon_description">Quest</div>
+        <img class = "lps_icon_image" src="http://media.tumblr.com/tumblr_llixzh0e8a1qhi61g.png" class="lps_icon_small">
+        <div class="icon_description">Quest</div>
+        <img class = "lps_icon_image" src="http://media.tumblr.com/tumblr_llixzh0e8a1qhi61g.png" class="lps_icon_small">
+        <div class="icon_description">Quest</div>
+        <img class = "lps_icon_image" src="http://media.tumblr.com/tumblr_llixzh0e8a1qhi61g.png" class="lps_icon_small">
+        <div class="icon_description">Quest</div>
+      </div>
+      <div class="icon_description">Quest Group</div>
+    </div>
+    
+    <div class="ui-state-default lps_icon ui-droppable"> 
+      <div class="lps_icon_group">
+        <img class = "lps_icon_image" src="http://media.tumblr.com/tumblr_llixzh0e8a1qhi61g.png" class="lps_icon_small">
+        <div class="icon_description">Quest</div>
+        <img class = "lps_icon_image" src="http://media.tumblr.com/tumblr_llixzh0e8a1qhi61g.png" class="lps_icon_small">
+        <div class="icon_description">Quest</div>
+        <img class = "lps_icon_image" src="http://media.tumblr.com/tumblr_llixzh0e8a1qhi61g.png" class="lps_icon_small">
+        <div class="icon_description">Quest</div>
+        <img class = "lps_icon_image" src="http://media.tumblr.com/tumblr_llixzh0e8a1qhi61g.png" class="lps_icon_small">
+        <div class="icon_description">Quest</div>
+        <img class = "lps_icon_image" src="http://media.tumblr.com/tumblr_llixzh0e8a1qhi61g.png" class="lps_icon_small">
+        <div class="icon_description">Quest</div>
+      </div>
+      <div class="icon_description">Quest Group</div>
+    </div>
+
+    <div class="ui-state-default lps_icon ui-droppable">
+      <div class="lps_icon_group">
+        <img class = "lps_icon_image" src="http://media.tumblr.com/tumblr_llixzh0e8a1qhi61g.png" class="lps_icon_small">
+        <div class="icon_description">Quest</div>
+        <img class = "lps_icon_image" src="http://media.tumblr.com/tumblr_llixzh0e8a1qhi61g.png" class="lps_icon_small">
+        <div class="icon_description">Quest</div>
+        <img class = "lps_icon_image" src="http://media.tumblr.com/tumblr_llixzh0e8a1qhi61g.png" class="lps_icon_small">
+        <div class="icon_description">Quest</div>
+        <img class = "lps_icon_image" src="http://media.tumblr.com/tumblr_llixzh0e8a1qhi61g.png" class="lps_icon_small">
+        <div class="icon_description">Quest</div>
+        <img class = "lps_icon_image" src="http://media.tumblr.com/tumblr_llixzh0e8a1qhi61g.png" class="lps_icon_small">
+        <div class="icon_description">Quest</div>
+        <img class = "lps_icon_image" src="http://media.tumblr.com/tumblr_llixzh0e8a1qhi61g.png" class="lps_icon_small">
+        <div class="icon_description">Quest</div>
+        <img class = "lps_icon_image" src="http://media.tumblr.com/tumblr_llixzh0e8a1qhi61g.png" class="lps_icon_small">
+        <div class="icon_description">Quest</div>
+        <img class = "lps_icon_image" src="http://media.tumblr.com/tumblr_llixzh0e8a1qhi61g.png" class="lps_icon_small">
+        <div class="icon_description">Quest</div>
+        <img class = "lps_icon_image" src="http://media.tumblr.com/tumblr_llixzh0e8a1qhi61g.png" class="lps_icon_small">
+        <div class="icon_description">Quest</div>
+      </div>
+      <div class="icon_description">Quest Group</div>
+    </div>
+
+    <div class="ui-state-default lps_icon ui-droppable">
+      <div class="lps_icon_single">
+        <img class = "lps_icon_image" src="http://media.tumblr.com/tumblr_llixzh0e8a1qhi61g.png">
+        <div class="icon_description">Quest</div>
+      </div>
+    </div>
+
+    <div class="ui-state-default lps_icon ui-droppable">
+      <div class="lps_icon_single">
+        <img class = "lps_icon_image" src="http://media.tumblr.com/tumblr_llixzh0e8a1qhi61g.png">
+        <div class="icon_description">Quest</div>
+      </div>
+    </div>
+
+    <div class="ui-state-default lps_icon ui-droppable">
+      <div class="lps_icon_single">
+        <img class = "lps_icon_image" src="http://media.tumblr.com/tumblr_llixzh0e8a1qhi61g.png">
+        <div class="icon_description">Quest</div>
+      </div>
+    </div>
+
   </div>
 
-  <div class="ui-state-default lps_icon ui-droppable">
-    <img class = "lps_icon_image" src="http://media.tumblr.com/tumblr_llixzh0e8a1qhi61g.png"><div class="icon_description">some text</div>
-  </div>
-
-  <div class="ui-state-default lps_icon ui-droppable lps_icon_group">
-    <img class = "lps_icon_image" src="http://media.tumblr.com/tumblr_llixzh0e8a1qhi61g.png" class="lps_icon_small"><div class="icon_description">some text</div>
-    <img class = "lps_icon_image" src="http://media.tumblr.com/tumblr_llixzh0e8a1qhi61g.png" class="lps_icon_small"><div class="icon_description">some text</div>
-  </div>
-
-  <div class="ui-state-default lps_icon ui-droppable lps_icon_group" style="">
-    <img class = "lps_icon_image" src="http://media.tumblr.com/tumblr_llixzh0e8a1qhi61g.png" class="lps_icon_small"><div class="icon_description">some text</div>
-    <img class = "lps_icon_image" src="http://media.tumblr.com/tumblr_llixzh0e8a1qhi61g.png" class="lps_icon_small"><div class="icon_description">some text</div>
-    <img class = "lps_icon_image" src="http://media.tumblr.com/tumblr_llixzh0e8a1qhi61g.png" class="lps_icon_small"><div class="icon_description">some text</div>
-  </div>
-  
-  <div class="ui-state-default lps_icon ui-droppable lps_icon_group">
-    <img class = "lps_icon_image" src="http://media.tumblr.com/tumblr_llixzh0e8a1qhi61g.png" class="lps_icon_small"><div class="icon_description">some text</div>
-    <img class = "lps_icon_image" src="http://media.tumblr.com/tumblr_llixzh0e8a1qhi61g.png" class="lps_icon_small"><div class="icon_description">some text</div>
-    <img class = "lps_icon_image" src="http://media.tumblr.com/tumblr_llixzh0e8a1qhi61g.png" class="lps_icon_small"><div class="icon_description">some text</div>
-    <img class = "lps_icon_image" src="http://media.tumblr.com/tumblr_llixzh0e8a1qhi61g.png" class="lps_icon_small"><div class="icon_description">some text</div>
-  </div>
-  
-  <div class="ui-state-default lps_icon ui-droppable lps_icon_group"> 
-    <img class = "lps_icon_image" src="http://media.tumblr.com/tumblr_llixzh0e8a1qhi61g.png" class="lps_icon_small"><div class="icon_description">some text</div>
-    <img class = "lps_icon_image" src="http://media.tumblr.com/tumblr_llixzh0e8a1qhi61g.png" class="lps_icon_small"><div class="icon_description">some text</div>
-    <img class = "lps_icon_image" src="http://media.tumblr.com/tumblr_llixzh0e8a1qhi61g.png" class="lps_icon_small"><div class="icon_description">some text</div>
-    <img class = "lps_icon_image" src="http://media.tumblr.com/tumblr_llixzh0e8a1qhi61g.png" class="lps_icon_small"><div class="icon_description">some text</div>
-    <img class = "lps_icon_image" src="http://media.tumblr.com/tumblr_llixzh0e8a1qhi61g.png" class="lps_icon_small"><div class="icon_description">some text</div>
-  </div>
-
-  <div class="ui-state-default lps_icon ui-droppable lps_icon_group" style="">
-    <img class = "lps_icon_image" src="http://media.tumblr.com/tumblr_llixzh0e8a1qhi61g.png" class="lps_icon_small"><div class="icon_description">some text</div>
-    <img class = "lps_icon_image" src="http://media.tumblr.com/tumblr_llixzh0e8a1qhi61g.png" class="lps_icon_small"><div class="icon_description">some text</div>
-    <img class = "lps_icon_image" src="http://media.tumblr.com/tumblr_llixzh0e8a1qhi61g.png" class="lps_icon_small"><div class="icon_description">some text</div>
-    <img class = "lps_icon_image" src="http://media.tumblr.com/tumblr_llixzh0e8a1qhi61g.png" class="lps_icon_small"><div class="icon_description">some text</div>
-    <img class = "lps_icon_image" src="http://media.tumblr.com/tumblr_llixzh0e8a1qhi61g.png" class="lps_icon_small"><div class="icon_description">some text</div>
-    <img class = "lps_icon_image" src="http://media.tumblr.com/tumblr_llixzh0e8a1qhi61g.png" class="lps_icon_small"><div class="icon_description">some text</div>
-    <img class = "lps_icon_image" src="http://media.tumblr.com/tumblr_llixzh0e8a1qhi61g.png" class="lps_icon_small"><div class="icon_description">some text</div>
-    <img class = "lps_icon_image" src="http://media.tumblr.com/tumblr_llixzh0e8a1qhi61g.png" class="lps_icon_small"><div class="icon_description">some text</div>
-    <img class = "lps_icon_image" src="http://media.tumblr.com/tumblr_llixzh0e8a1qhi61g.png" class="lps_icon_small"><div class="icon_description">some text</div>
-  </div>
-
-  <div class="ui-state-default lps_icon ui-droppable">
-    <img class = "lps_icon_image" src="http://media.tumblr.com/tumblr_llixzh0e8a1qhi61g.png"><div class="icon_description">some text</div>
-  </div>
-
-  <div class="ui-state-default lps_icon ui-droppable">
-    <img class = "lps_icon_image" src="http://media.tumblr.com/tumblr_llixzh0e8a1qhi61g.png"><div class="icon_description">some text</div>
-  </div>
-
-  <div class="ui-state-default lps_icon ui-droppable">
-    <img class = "lps_icon_image" src="http://media.tumblr.com/tumblr_llixzh0e8a1qhi61g.png"><div class="icon_description">some text</div>
-  </div>
-
-</div>
- 
- 
-
-</body></html>
+  </body>
+</html>
